cf_analysis_results/checkerframework_3.42.0_results/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8.txt
../dataset/june2020_dataset/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/test_stream_deflate_inflate.java:11: error: (required.method.not.called) $$ 4 $$ method close $$ zOut $$ com.jcraft.jzlib.ZOutputStream $$ possible exceptional exit due to new ObjectOutputStream(zOut) with exception type java.io.IOException $$ ( 288, 358 ) $$ @MustCall method close may not have been invoked on zOut or any of its aliases.
      ZOutputStream zOut = new ZOutputStream(out, JZlib.Z_BEST_COMPRESSION);
                    ^
  The type of object is: com.jcraft.jzlib.ZOutputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectOutputStream(zOut) with exception type java.io.IOException
../dataset/june2020_dataset/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/test_stream_deflate_inflate.java:17: error: (required.method.not.called) $$ 4 $$ method close $$ zIn $$ com.jcraft.jzlib.ZInputStream $$ possible exceptional exit due to new ObjectInputStream(zIn) with exception type java.io.IOException $$ ( 560, 600 ) $$ @MustCall method close may not have been invoked on zIn or any of its aliases.
      ZInputStream zIn = new ZInputStream(in);
                   ^
  The type of object is: com.jcraft.jzlib.ZInputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(zIn) with exception type java.io.IOException
../dataset/june2020_dataset/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/ZInputStream.java:53: error: (required.method.not.called) $$ 4 $$ method close $$ new InflaterInputStream(in, nowrap) $$ com.jcraft.jzlib.InflaterInputStream $$ regular method exit $$ ( 2075, 2110 ) $$ @MustCall method close may not have been invoked on new InflaterInputStream(in, nowrap) or any of its aliases.
    iis = new InflaterInputStream(in, nowrap);
          ^
  The type of object is: com.jcraft.jzlib.InflaterInputStream.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/ZOutputStream.java:68: error: (required.method.not.called) $$ 4 $$ method close $$ new DeflaterOutputStream(out, deflater) $$ com.jcraft.jzlib.DeflaterOutputStream $$ regular method exit $$ ( 2455, 2494 ) $$ @MustCall method close may not have been invoked on new DeflaterOutputStream(out, deflater) or any of its aliases.
    dos = new DeflaterOutputStream(out, deflater);
          ^
  The type of object is: com.jcraft.jzlib.DeflaterOutputStream.
  Reason for going out of scope: regular method exit
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
4 errors
